# EventScope

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ingest.yml
airflow/dags/: eventscope_ingest_dag.py
db/: schema.sql
scripts/: ingest.sh  schedule_windows.ps1
src/eventscope/: __init__.py  cli.py  config.py  db.py  geo.py  geocoding.py  models.py  pipeline.py  repository.py
src/eventscope/api/: main.py  schemas.py
src/eventscope/dedup/: __init__.py  deduplicator.py  embeddings.py
src/eventscope/extraction/: __init__.py  llm.py  schema.py
src/eventscope/scrapers/: __init__.py  almirante_brown.py  base.py  esteban_echeverria.py  eventbrite.py  government.py  instagram_oembed.py  lomas_agenda.py  quilmes.py  venue_html.py
tests/: conftest.py  test_api.py  test_dedup.py  test_extraction.py  test_geocoding.py  test_pipeline.py  test_scrapers.py
tests/fixtures/: almirante_brown_response.json  esteban_echeverria_response.json  eventbrite_response.json  government_page.html  instagram_oembed.json  lomas_agenda.html  lomas_agenda.json  quilmes_noticias.html  venue_page.html
