[project]
name = "eventscope"
version = "0.1.0"
description = "EventScope — agregador inteligente de eventos por scraping multi-fuente (mapa, calendario, agenda)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
# Heavy / production-only extras. The core slice runs without these.
postgres = ["psycopg[binary]>=3.1", "geoalchemy2>=0.14"]
embeddings = ["sentence-transformers>=2.6", "numpy>=1.26"]
airflow = ["apache-airflow>=2.8"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
eventscope = "eventscope.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
